Added services and counter section

--- a/index.html
+++ b/index.html
@@ -80,6 +80,217 @@
         </div>
     </div>
 
+    <!-- Services section -->
+    <section id='services' class="services-section pt-5 ">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="service-title text-center ">
+                        <h3 class="title-a">
+                            SERVICE
+                        </h3>
+                        <p class="subtitle-a">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        </p>
+                        <div class="line"></div>
+                    </div>
+                </div>
+                <div class="row pt-5">
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class='fas fa-briefcase'></i>
+
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b"> Web Design</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class="far fa-address-card"></i>
+
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b"> WEB DEVELOPMENT</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class="far fa-chart-bar"></i>
+
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b"> PHOTOGRAPHY</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class="fas fa-binoculars"></i>
+
+
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b"> RESPONSIVE DESIGN</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class="fas fa-sun"></i>
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b"> GRAPHIC DESIGN</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="service-card">
+                            <div class="service-icon">
+                                <span class="icon-circle">
+                                    <i class="far fa-calendar-alt"></i>
+                                </span>
+
+                            </div>
+                            <div class="service-content">
+                                <h2 class="title-b">MARKETING SERVICES</h2>
+                                <p class="service-description text-center">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem
+                                    fugiat! Quia, provident vitae! Magni tempora perferendis eum non provident.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- counter section -->
+    <section class="section-counter count bg-img">
+        <div class="layer-count"></div>
+        <div class='container position-relative'>
+            <div class='row'>
+                <div class='col-sm-3 col-lg-3'>
+                    <div class='counter-box pt-4 pt-md-0'>
+                        <div class='counter-icon'>
+                            <span class='icon-circle'>
+                                <i class='fas fa-check'>
+
+                                </i>
+
+                            </span>
+                        </div>
+                        <div class="counter-caption">
+                            <h4>450</h4>
+                            <p>WORKS COMPLETED</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class='col-sm-3 col-lg-3'>
+                    <div class='counter-box pt-4 pt-md-0'>
+                        <div class='counter-icon'>
+                            <span class='icon-circle'>
+                                <i class='fas fa-th-list'>
+
+                                </i>
+
+                            </span>
+                        </div>
+                        <div class="counter-caption">
+                            <h4>25</h4>
+                            <p>YEARS OF EXPERIENCE</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class='col-sm-3 col-lg-3'>
+                    <div class='counter-box pt-4 pt-md-0'>
+                        <div class='counter-icon'>
+                            <span class='icon-circle'>
+                                <i class="fas fa-user-friends"></i>
+
+
+                            </span>
+                        </div>
+                        <div class="counter-caption">
+                            <h4>550</h4>
+                            <p>TOTAL CLIENTS</p>
+                        </div>
+                    </div>
+                </div>
+                <div class='col-sm-3 col-lg-3'>
+                    <div class='counter-box pt-4 pt-md-0'>
+                        <div class='counter-icon'>
+                            <span class='icon-circle'>
+                                <i class="fas fa-award"></i>
+                                </i>
+
+                            </span>
+
+                        </div>
+                        <div class="counter-caption">
+                            <h4>48</h4>
+                            <p>AWARD WON</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+
+    </section>
 
     <!-- Footer section -->
 
